# Reporte_Servicios

./: .gitignore  404.html  GEMINI.md  README.md  README_VALIDATION_SUMMARY.md  TASK_11_1_COMPLETE.md  TASK_11_1_VERIFICATION.md  TASK_11_2_COMPLETE.md  TASK_13_1_VERIFICATION.md  TASK_13_2_COMPLETE.md  TASK_13_2_VALIDATION_REPORT.md  TASK_6_3_VERIFICATION.md  TASK_6_4_VERIFICATION.md  TASK_7_1_COMPLETE.md  TASK_7_1_VERIFICATION.md  TODOs.md  demo_generator.py  demo_task_6_4.py  execute_generator.py  generate_readme_manual.py  generate_readme_now.py  index.html  init_db.py  manual_test_cli.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run_app.py  run_manual_test.sh  run_readme_generator.py  run_verification.py  simple_validate_readme.py  temporal.ts  test_cli.py  test_db.py  test_generator_simple.py  validate_readme.py  verify_cli.py  windows_build.spec
.github/workflows/: build_windows.yml  docs.yml
INSTRUCCIONES_USUARIO/: index.html
api/: __init__.py
api/routes/: __init__.py  reports.py
conductor/: product.md  tech-stack.md  workflow.md
core/: main.py  paths.py  pdf_generator.py
core/pdf/: __init__.py  engine.py  (+1 more)
data/: dB.sqlite3  database.py  models.py  schemas.py
docs/: INSTRUCCIONES_USUARIO.md  index.md  reference.md  testing.md
interface/: index.html
reference/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
testing/: index.html
tests/: conftest.py  test_cli_task_11_1.py  test_generator_task_7_1.py  test_reports.py  test_sections_task_6_4.py  test_status.py
tools/: generate_readme.py
(+56 files in other folders)
