[project]
name = "reporte-servicios"
version = "0.1.0"
description = "API de gestión de Reporte de servicios para taller mecánico"
readme = "GEMINI.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "sqlalchemy>=2.0.0",
    "pydantic[email]>=2.0.0",
    "reportlab>=4.0.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "faker>=19.3.0",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
]
